--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,27 @@
 /* Fonts */
 @font-face {
-  font-family: "roboto";
+  font-family: "Roboto";
   font-weight: 400;
   font-style: normal;
-  src: url("../fonts/roboto.woff2") format("woff2"),
-       url("../fonts/roboto.woff") format("woff");
+  src: local("Roboto")
+      url("../fonts/roboto.woff2") format("woff2"),
+      url("../fonts/roboto.woff") format("woff");
 }
 @font-face {
-  font-family: "Roboto Bold";
+  font-family: "Roboto";
   font-weight: 700;
   font-style: normal;
-  src: url("../fonts/robotobold.woff2") format("woff2"),
-       url("../fonts/robotobold.woff") format("woff");
+  src: local("Roboto")
+      url("../fonts/robotobold.woff2") format("woff2"),
+      url("../fonts/robotobold.woff") format("woff");
 }
 @font-face {
-  font-family: "Roboto Medium";
+  font-family: "Roboto";
   font-weight: 500;
   font-style: normal;
-  src: url("../fonts/robotomedium.woff2") format("woff2"),
-       url("../fonts/robotomedium.woff") format("woff");
+  src: local("Roboto")
+      url("../fonts/robotomedium.woff") format("woff2"),
+      url("../fonts/robotomedium.woff2") format("woff");
 }
 
 /* Variables */
@@ -38,10 +41,9 @@
 body {
 margin: 0;
 padding: 0;
-font-family: "roboto";
+font-family: "Roboto";
 font-size: 16px;
 font-weight: 24px;
-font-weight: 500;
 color: var(--basic-color);
 }
 
@@ -54,6 +56,7 @@ img {
   height: auto;
 }
 
+/* Про nav не поняла */
 nav {
   font-size: 16px;
   font-weight: 30px;
@@ -63,7 +66,9 @@ nav {
 
 .text {color: var(--basic-color);
   font-size: 55px;
-line-height: 55px;}
+line-height: 55px;
+font-weight: 500;
+}
 
 p {
   color: var(--add-text-color);
@@ -74,25 +79,26 @@ p {
 .pres {
   font-size: 24px;
 line-height: 30px;
-font-weight: bold;
+font-weight: 700;
 }
 
 .slogan {
   font-size: 45px;
 line-height: 45px;
-font-weight: bold;
+font-weight: 500;
 }
 
 .do {
   color:  var(--basic-color);
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .numbers {
   font-size: 45px;
   line-height: 64px;
-  font-weight: bold;
+  font-weight: 700;
 }
+
 .subtext {
   font-size: 16px;
   line-height: 18px;
@@ -102,7 +108,7 @@ font-weight: bold;
 h2 {
   font-size: 18px;
   line-height: 30px;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .window {
@@ -114,7 +120,7 @@ h2 {
 .footer-text {
   font-size: 36px;
   line-height: 36px;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .footer-text_ {
