--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
 }
 
 body {
-margin: 0;
+margin: 0 auto;
 padding: 0;
 font-weight: 400;
 font-family: "Roboto", "Arial", sans-serif;
@@ -62,6 +62,7 @@ img {
 .main-header {
   color: var(--basic-color);
   background-color: var(--background-color);
+
 }
 
 a {
@@ -289,6 +290,34 @@ button[type=button]{
   line-height: 18px;
 }
 
+.img1 {
+  border: 3Px solid rgb(58, 129, 0);
+  text-align: center;
+  width: 1440px;
+  margin: 0 auto;
+}
+
+.map {
+  border: 3px solid cyan;
+  width: 1440px;
+  margin: 0 auto;
+}
+
+.services1 {
+  width: 1440px;
+  margin: 0 auto;
+  border: 3px solid rgb(141, 6, 107);
+}
+
+.header {
+  width: 1440px;
+  margin: 0 auto;
+  border: 3px solid rgb(145, 148, 0);
+}
+
+
+
+
 /* Grid */
 
 .about1 {
@@ -300,13 +329,15 @@ button[type=button]{
 
 .about {
   border: 3Px solid rgb(19, 0, 129);
-  margin: 0 auto;
+
 }
 
 
 .block2 {
   border: 3Px solid rgb(129, 41, 0);
-  margin: 0 auto;
+  padding: auto;
+
+
   }
 
 .block3 {
