--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,11 @@ button[type=button]{
   border: 3px solid rgb(145, 148, 0);
 }
 
+.header1 {
+  width: 1440px;
+  margin: 0 auto;
+  border: 3px solid rgb(145, 148, 0);
+}
 
 
 .sidebar {
@@ -367,7 +372,7 @@ button[type=button]{
 
 .catalog-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   border: 2Px solid red;
   margin: 0 auto;
   width: 1440px;
@@ -376,13 +381,9 @@ button[type=button]{
 .list {
   border: 2Px solid rgb(7, 0, 0);
   margin: 0 auto;
-  width: 1440px;
 }
 
 .catalog {
   border: 3Px solid rgb(131, 0, 98);
   margin: 0 auto;
-  width: 1440px;
 }
-
-
