--- a/css/style.css
+++ b/css/style.css
@@ -315,23 +315,13 @@ button[type=button]{
   border: 3px solid rgb(145, 148, 0);
 }
 
-.header1 {
-  width: 1440px;
-  margin: 0 auto;
-  border: 3px solid rgb(145, 148, 0);
-}
+
 
 
 .sidebar {
   width: 1440px;
   margin: 0 auto;
   border: 3px solid rgb(74, 0, 247);
-}
-
-.sorting {
-  width: 1440px;
-  margin: 0 auto;
-  border: 3px solid rgb(247, 0, 0);
 }
 
 .num {
@@ -385,25 +375,21 @@ button[type=button]{
 
 .catalog {
   border: 3Px solid rgb(131, 0, 98);
-
+  width: 614px;
 }
 
 /* Flex */
 
 .general {
   display: flex;
-  border: 3Px solid rgb(15, 15, 15);
-
-
+  border: 3Px solid rgb(80, 64, 105);
 }
 
 .index-flex {
   display: flex;
-  border: 3Px solid rgb(15, 15, 15);
+  border: 3Px solid rgb(255, 0, 0);
   justify-content: space-around;
 }
-
-
 
 .services-flex {
   display: flex;
@@ -415,4 +401,27 @@ button[type=button]{
   display: flex;
   justify-content: space-around;
 }
+
+.sorting {
+  display: flex;
+  justify-content: space-around;
+}
+
+.pages {
+  display: flex;
+  justify-content: space-around;
+}
+
+.cards {
+  display: flex;
+  flex-basis: 50%;
+  flex-wrap: wrap;
+}
+
+.cards-item {
+  flex-basis: 50%;
+  flex-wrap: wrap;
+}
+
+
 
