--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@ button[type=button]{
 
 .catalog-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 540px 740px;
   border: 2Px solid red;
   margin: 0 auto;
   width: 1440px;
@@ -375,7 +375,6 @@ button[type=button]{
 
 .catalog {
   border: 3Px solid rgb(131, 0, 98);
-  width: 614px;
 }
 
 /* Flex */
@@ -414,14 +413,23 @@ button[type=button]{
 
 .cards {
   display: flex;
-  flex-basis: 50%;
   flex-wrap: wrap;
 }
 
-.cards-item {
-  flex-basis: 50%;
+.list1 {
+  display: flex;
   flex-wrap: wrap;
 }
 
+.item1,
+.item2,
+.item3 {
+  flex-basis: 50%;
+  padding: 10px;
+}
+
+.card-content {
+background-color: brown;
+  }
 
 
